# ovf

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  debugging_launch_configs.md  meshAnalysis.cpp  ovf.cpp
archive/ovf/: CMakeLists.txt
archive/ovf/cli/: CommandLineOptions.hpp  ovfWorkflow.hpp
archive/ovf/geometry/headers/: BVH.hpp  Blockers.hpp  Ray.hpp  STLReader.hpp  Triangle.hpp  Triangulation.hpp
archive/ovf/geometry/src/: BVH.cpp  Blockers.cpp  Ray.cpp  Triangle.cpp  Vector3.cpp  VisualizeBVH.m
archive/ovf/meshanalysis/: CommandLineOptions.hpp  analysis.hpp  main.cpp
archive/ovf/solvers/: CMakeLists.txt
archive/ovf/solvers/headers/: Solver.hpp
archive/ovf/solvers/src/: DoubleAreaIntegration.cpp  Solver.cpp
archive/ovf/tests/: TestGlobals.h.in
archive/ovf/tests/assets/: 3_tall_box.stl  rtg_model.stl  xy_plane_offset_unit_square_binary.stl  xy_plane_offset_unit_square_text.stl
archive/ovf/tests/gtest/: test_BVH.cpp  test_BVHNode.cpp  test_DoubleAreaIntegration.cpp  test_Triangulation.cpp  test_ViewFactor.cpp
archive/ovf/viewfactor/: CMakeLists.txt
archive/ovf/viewfactor/headers/: OutputWriter.hpp
headers/: all_headers.hpp  cli.hpp  geometry.hpp  io.hpp  results.hpp  solver.hpp  workflow.hpp
movf/: Mesh.m  MeshTest.m  Vector3Test.m  ViewFactor.m
movf/bvh/: BVH.m  BVHNode.m  BVHTest.m  Mesh.m  MeshTest.m  Ray.m  RayTest.m  Triangle.m  Vector3.m  Vector3Test.m  evaluateNodeChildrenSurfaceAreaHeuristic.m  readMesh.m  test.m  test2.m  vectorMaxima.m  vectorMinima.m
movf/bvh/assets/: skull.stl
movf/dev/: DoubleAreaIntegration.m  NumericMode.m  RefinementMode.m  SelfIntersectionMode.m  Solver.m  SolverOptions.m
movf/geometry/: Mesh.m  Triangle.m  Vector3.m
movf/test/: IndexValuePair.m  Mesh.m  MeshType.m  Triangle.m  TriangleTest.m  ViewFactor.m  ViewFactorState.m  ViewFactorTest.m  backFaceCulling.m  calculateRays.m  doubleAreaIntegration.m  meshDirections.m
movf/viewfactor/: IndexValuePair.m  ViewFactor.m  ViewFactorMap.m
ovf/: CMakeLists.txt  config.hpp  organization.md
ovf/archive/geometry/include/: FileReader.hpp  Ray.hpp  STLReader.hpp  Triangle.hpp  Triangulation.hpp  Vector3.hpp
ovf/archive/geometry/src/: Triangle.cpp  Triangulation.cpp  Vector3.cpp
ovf/archive/header/: config.hpp
ovf/archive/numerics/src/: DoubleAreaIntegration.cpp
ovf/archive/solver/include/: Blocking.hpp  MollerTrumbore.hpp  SolverFactory.hpp  SolverOptions.hpp
ovf/archive/solver/src/: BFCull.cpp  SolverFactory.cpp  SolverSpecifier.cpp
ovf/cli/: CMakeLists.txt  CommandLineOptions.hpp  cli.hpp  main.cpp  ovfWorkflow.hpp
ovf/cpp/: CMakeLists.txt
ovf/cuda/: CMakeLists.txt
ovf/geometry/: CMakeLists.txt
ovf/geometry/headers/: BVH.hpp  BVHNode.hpp  Blockers.hpp  FileReader.hpp  Ray.hpp  STLReader.hpp  Triangle.hpp  Triangulation.hpp  Vector3.hpp
ovf/geometry/include/: BVH.hpp  BVHNode.hpp  Blockers.hpp  Triangle.hpp  Triangulation.hpp  Vector3.hpp
ovf/geometry/src/: BVH.cpp  BVHNode.cpp  Blockers.cpp  Ray.cpp  STLReader.cpp  Triangle.cpp  Triangulation.cpp  Vector3.cpp  VisualizeBVH.m
ovf/include/: CMakeLists.txt
ovf/include/ovf/core/: BFCull.hpp  FileReader.hpp  STLReader.hpp  Solver.hpp  SolverOptions.hpp  Triangle.hpp  Triangulation.h  Triangulation.hpp  Vector3.h  Vector3.hpp  ViewFactor.hpp
ovf/include/ovf/manager/: SolverFactory.hpp  SolverSpecifier.hpp
ovf/meshanalysis/: CMakeLists.txt
ovf/numerics/include/: DoubleAreaIntegration.hpp
ovf/solver/include/: BFCull.hpp  Blocking.hpp  Solver.hpp  SolverSpecifier.hpp  ViewFactor.hpp
ovf/solver/src/: BFCull.cpp  ViewFactor.cpp
ovf/solvers/: CMakeLists.txt
ovf/solvers/headers/: DoubleAreaIntegration.hpp  SingleAreaIntegration.hpp  Solver.hpp  SolverOptions.hpp
ovf/solvers/src/: DoubleAreaIntegration.cpp  SingleAreaIntegration.cpp  Solver.cpp  SolverOptions.cpp
ovf/src/: CMakeLists.txt
ovf/src/core/: BFCull.cpp  STLReader.cpp  Triangle.cpp  Triangulation.cpp  Vector3.cpp  ViewFactor.cpp
ovf/src/manager/: SolverFactory.cpp  SolverSpecifier.cpp
ovf/test/: CMakeLists.txt
ovf/test/gtest/: CMakeLists.txt  test_Triangle.cpp  test_Vector3.cpp
ovf/test/pytest/: validation_suite.py
ovf/test/pytest/assets/perpendicular-plates/non-shared-edge/: TODO.md
ovf/test/pytest/include/: ParseTest.py  TestingLog.py  TestingValidation.py
ovf/test/pytest/tests/perpendicular-plates/: per-plate-nonsharing-008.xml
ovf/tests/: CMakeLists.txt  TestGlobals.hpp  test_Triangle.cpp  test_Vector3.cpp
ovf/tests/assets/: refinement_8_xy_plane_offset_unit_square.stl  refinement_8_xy_plane_unit_square.stl  xy_plane_unit_square_text.stl
ovf/tests/gtest/: CMakeLists.txt  main.cpp  test_BVH.cpp  test_BVHNode.cpp  test_DoubleAreaIntegration.cpp  test_IndexValuePair.cpp  test_Triangle.cpp  test_Triangulation.cpp  test_Vector3.cpp  test_ViewFactor.cpp
ovf/viewfactor/: CMakeLists.txt
ovf/viewfactor/headers/: IndexValuePair.hpp  OutputWriter.hpp  ViewFactor.hpp
ovf/viewfactor/src/: IndexValuePair.cpp  OutputWriter.cpp  ViewFactor.cpp
